--- a/home.html
+++ b/home.html
@@ -16,8 +16,8 @@
             <section>
                 <h2>Entre como participante</h2>
                 <form>
-                    <label>Código da sala</label>
-                    <input type="text">
+                    <label class="sr-only" for="room-id">Código da sala</label>
+                    <input type="text" id="room-id">
                     <button>Entrar na sala</button>
                 </form>
             </section>
