--- a/home.html
+++ b/home.html
@@ -18,8 +18,24 @@
                 <form>
                     <label class="sr-only" for="room-id">Código da sala</label>
                     <input type="text" id="room-id">
-                    <button>Entrar na sala</button>
+                    <button>
+                        <img src="assets/enter-room.svg" alt="Entrar na sala">
+                        Entrar na sala
+                    </button>
                 </form>
+            </section>
+
+            <div class="separator">
+                <div></div>
+                <div>ou</div>
+                <div></div>
+            </div>
+
+            <section>
+                <h2>Crie sua própria sala de forma fácil</h2>
+                <a href="create-room.html">
+                    <img src="assets/users.svg" alt="Criar sala">Criar sala
+                </a>
             </section>
         </div>
     </main>
