--- a/home.html
+++ b/home.html
@@ -15,37 +15,40 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <img src="assets/logo.svg" alt="Rocket.Q Logo">
-    </header>
+    <div id="home" class="content">
 
-    <main>
-        <div class="container">
-            <section>
-                <h2>Entre como participante</h2>
-                <form>
-                    <label class="sr-only" for="room-id">Código da sala</label>
-                    <input type="text" id="room-id">
-                    <button>
-                        <img src="assets/enter-room.svg" alt="Entrar na sala">
-                        Entrar na sala
-                    </button>
-                </form>
-            </section>
+        <header>
+            <img src="assets/logo.svg" alt="Rocket.Q Logo">
+        </header>
 
-            <div class="separator">
-                <div></div>
-                <div>ou</div>
-                <div></div>
+        <main>
+            <div class="container">
+                <section>
+                    <h2>Entre como participante</h2>
+                    <form>
+                        <label class="sr-only" for="room-id">Código da sala</label>
+                        <input type="text" id="room-id">
+                        <button>
+                            <img src="assets/enter-room.svg" alt="Entrar na sala">
+                            Entrar na sala
+                        </button>
+                    </form>
+                </section>
+            
+                <div class="separator">
+                    <div></div>
+                    <div>ou</div>
+                    <div></div>
+                </div>
+            
+                <section>
+                    <h2>Crie sua própria sala de forma fácil</h2>
+                    <a href="create-room.html">
+                        <img src="assets/users.svg" alt="Criar sala">Criar sala
+                    </a>
+                </section>
             </div>
-
-            <section>
-                <h2>Crie sua própria sala de forma fácil</h2>
-                <a href="create-room.html">
-                    <img src="assets/users.svg" alt="Criar sala">Criar sala
-                </a>
-            </section>
-        </div>
-    </main>
+        </main>
+    </div>
 </body>
 </html>
