Adicionada imagem de background

--- a/home.html
+++ b/home.html
@@ -21,6 +21,8 @@
             <img src="assets/logo.svg" alt="Rocket.Q Logo">
         </header>
 
+        <div id="bg"></div>
+
         <main>
             <div class="container">
                 <section>
