--- a/home.html
+++ b/home.html
@@ -45,8 +45,9 @@
             
                 <section>
                     <h2>Crie sua própria sala de forma fácil</h2>
-                    <a href="create-room.html">
-                        <img src="assets/users.svg" alt="Criar sala">Criar sala
+                    <a href="create-room.html" class="button outlined">
+                        <img src="assets/users.svg" alt="Criar Sala"> 
+                        Criar Sala                      
                     </a>
                 </section>
             </div>
