--- a/room.html
+++ b/room.html
@@ -18,6 +18,17 @@
     <div id="room" class="content">
         <header>
             <img src="assets/logo.svg" alt="Rocket.Q Logo">
+
+            <div class="buttons">
+                <div class="button outlined">
+                    #323243
+                    <img src="assets/copy.svg" alt="Copiar número da sala">
+                </div>
+                <a href="#" class="button">
+                    <img src="assets/users-white.svg" alt="Criar uma sala">
+                    Criar Sala
+                </a>
+            </div>
         </header>
     </div>
 </body>
