Iniciado desenvolvimento do corpo da página

--- a/room.html
+++ b/room.html
@@ -30,6 +30,16 @@
                 </a>
             </div>
         </header>
+
+        <main>
+            <section id="question-forms">
+                <h2>Faça sua pergunta</h2>
+                <form action="">
+                    <label class="sr-only" for="question">O que você quer perguntar?</label>
+                    <textarea name="question" placeholder="O que você quer perguntar?" id="question"></textarea>
+                </form>
+            </section>
+        </main>
     </div>
 </body>
 </html>
