Terminada semântica do form

--- a/room.html
+++ b/room.html
@@ -37,6 +37,14 @@
                 <form action="">
                     <label class="sr-only" for="question">O que você quer perguntar?</label>
                     <textarea name="question" placeholder="O que você quer perguntar?" id="question"></textarea>
+
+                    <footer>
+                        <div>
+                            <img src="" alt="">
+                            Esta pergunta é anônima
+                        </div>
+                        <button>Enviar</button>
+                    </footer>
                 </form>
             </section>
         </main>
