--- a/room.html
+++ b/room.html
@@ -12,7 +12,7 @@
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="room" class="content">
@@ -32,7 +32,7 @@
         </header>
 
         <main>
-            <section id="question-forms">
+            <section id="question-form">
                 <h2>Faça sua pergunta</h2>
                 <form action="">
                     <label class="sr-only" for="question">O que você quer perguntar?</label>
@@ -40,7 +40,7 @@
 
                     <footer>
                         <div>
-                            <img src="" alt="">
+                            <img src="assets/lock.svg" alt="cadeado">
                             Esta pergunta é anônima
                         </div>
                         <button>Enviar</button>
