--- a/room.html
+++ b/room.html
@@ -54,7 +54,7 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/avatar.svg" alt="avatar">
+                                <img src="assets/user.svg" alt="avatar">
                             </div>
                             <div class="question">
                                 <p>Qual a diferença entre const, var e let no JavaScript?</p>
@@ -75,7 +75,7 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/avatar.svg" alt="avatar">
+                                <img src="assets/user.svg" alt="avatar">
                             </div>
                             <div class="question">
                                 <p>O que é JavaScript?</p>
@@ -96,7 +96,7 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/avatar.svg" alt="avatar">
+                                <img src="assets/user.svg" alt="avatar">
                             </div>
                             <div class="question">
                                 <p>O que é TypeScript?</p>
