--- a/room.html
+++ b/room.html
@@ -99,7 +99,7 @@
                                 <img src="assets/user.svg" alt="avatar">
                             </div>
                             <div class="question">
-                                <p>O que é TypeScript?</p>
+                                <p>O que é JavaScript?</p>
                             </div>
                         </div>
                         <div class="actions">
@@ -107,6 +107,23 @@
                                 <img src="assets/check.svg" alt="Marcar como lida">
                                 Marcar como lida
                             </a>
+                            <a href="#" class="delete">
+                                <img src="assets/trash.svg" alt="Excluir">
+                                Excluir
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="question-wrapper read">
+                        <div class="question-content">
+                            <div class="user">
+                                <img src="assets/user.svg" alt="avatar">
+                            </div>
+                            <div class="question">
+                                <p>O que é TypeScript?</p>
+                            </div>
+                        </div>
+                        <div class="actions">
                             <a href="#" class="delete">
                                 <img src="assets/trash.svg" alt="Excluir">
                                 Excluir
