Corrigida estilização para perguntas longas

--- a/room.html
+++ b/room.html
@@ -78,7 +78,9 @@
                                 <img src="assets/user.svg" alt="avatar">
                             </div>
                             <div class="question">
-                                <p>O que é JavaScript?</p>
+                                <p>
+                                    Você já sabe quais as bases você precisa melhorar para alcançar o seu próximo nível com maestria? Definiu seu foco e objetivo para seguir em frente? Estou curiosa e embasbacada com sua perserverança por ter alcançado a terceira aula e sei que vai continuar até o fim, então responde aí pra gente!!
+                                </p>
                             </div>
                         </div>
                         <div class="actions">
