Estruturado HTML do modal

--- a/room.html
+++ b/room.html
@@ -137,5 +137,21 @@
             </section>
         </main>
     </div>
+
+    <div class="modal-wrapper">
+        <div class="modal">
+            <h2>Excluir</h2>
+            <p>Tem certeza que você deseja excluir esta pergunta?</p>
+            <form action="">
+                <label class="sr-only" for="password">Digite sua senha admin</label>
+                <input type="password" name="password" id="password" placeholder="Digite sua senha admin">
+
+                <div class="buttons">
+                    <div class="button">Cancelar</div>
+                    <button>Sim, excluir</button>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
