Configuradas cores dos botões

--- a/room.html
+++ b/room.html
@@ -9,6 +9,7 @@
     <!-- styles -->
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/room.css">
+    <link rel="stylesheet" href="styles/modal.css">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -147,8 +148,8 @@
                 <input type="password" name="password" id="password" placeholder="Digite sua senha admin">
 
                 <div class="buttons">
-                    <div class="button">Cancelar</div>
-                    <button>Sim, excluir</button>
+                    <div class="button grey">Cancelar</div>
+                    <button class="red">Sim, excluir</button>
                 </div>
             </form>
         </div>
