--- a/room.html
+++ b/room.html
@@ -141,7 +141,7 @@
 
     <div class="modal-wrapper">
         <div class="modal">
-            <h2>Excluir</h2>
+            <h2>Excluir pergunta</h2>
             <p>Tem certeza que você deseja excluir esta pergunta?</p>
             <form action="">
                 <label class="sr-only" for="password">Digite sua senha admin</label>
